--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>EKZ</title>
+    <title>creativedigital</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="assets/src/img/favicon.png">
+    <link rel="stylesheet" type="text/css" href="assets/src/javascript/slick-1.8.0/slick/slick.css"/>
+    // Add the new slick-theme.css if you want the default styling
+    <link rel="stylesheet" type="text/css" href="assets/src/javascript/slick-1.8.0/slick/slick-theme.css"/>
+    <link rel="stylesheet" href="assets/src/javascript/plugins/slick.min.js">
     <link rel="stylesheet" href="assets/dist/css/style.css">
-    <script src="assets/components/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
 
@@ -53,6 +57,7 @@
 <!--Header-->
 
 <!--Main-->
+
 
 <main class="main">
     <div class="container">
@@ -126,10 +131,171 @@
                         <a href="#" class="btn btn-outline-primary btn-sm">Read more</a>
                     </div>
                 </div>
+
+
+                <div class="block">
+                    <h4>
+                        New Forest
+                    </h4>
+                    <div class="accordion" id="accordion2">
+                        <div class="accordion-group btn-block">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle nav-link" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapseOne">
+                                    Page 1
+                                </a>
+                            </div>
+                            <div id="collapseOne" class="accordion-body collapse in">
+                                <div class="accordion-inner">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto at
+                                    dignissimos error eum ex facilis inventore ipsam perferendis provident, quasi quos
+                                    suscipit, vitae? Rerum?
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading btn-block">
+                                <a class="accordion-toggle nav-link" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapseTwo">
+                                    Page 2
+                                </a>
+                            </div>
+                            <div id="collapseTwo" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate dolorum eum
+                                    eveniet quasi quidem quo tempore voluptatum? Beatae commodi earum excepturi expedita
+                                    impedit ipsam iure labore maiores nostrum praesentium quae quisquam, sit tempore
+                                    veniam?
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group btn-block">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle nav-link" data-toggle="collapse" data-parent="#accordion3"
+                                   href="#collapseThree">
+                                    Page 3
+                                </a>
+                            </div>
+                            <div id="collapseThree" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem cum dolorum ducimus
+                                    enim eos hic illo iure odit placeat, voluptatem. Ab accusamus accusantium ad aperiam
+                                    at autem cum cupiditate delectus dolor earum est ex excepturi, id illo laboriosam
+                                    laborum natus nulla odit praesentium provident quibusdam quos sed, sunt unde
+                                    voluptate.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="sl">
+                        <div class="sl__slide"><img src="assets/src/img/sl1.jpg" alt="Картинка слайда 1"
+                                                    class="sl__img">
+                            <div class="sl__text">
+                                <h3 class="sl__zag">Слайд 1</h3>
+                                <p class="sl__desc">Описание слайда №1</p>
+                            </div>
+                        </div>
+                        <div class="sl__slide"><img src="assets/src/img/sl2.jpg" alt="Картинка слайда 2"
+                                                    class="sl__img">
+                            <div class="sl__text">
+                                <h3 class="sl__zag">Слайд 2</h3>
+                                <p class="sl__desc">Описание слайда №2</p>
+                            </div>
+                        </div>
+                        <div class="sl__slide"><img src="assets/src/img/sl3.jpg" alt="Картинка слайда 3"
+                                                    class="sl__img">
+                            <div class="sl__text">
+                                <h3 class="sl__zag">Слайд 3</h3>
+                                <p class="sl__desc">Описание слайда №3</p>
+                            </div>
+                        </div>
+                        <div class="sl__slide"><img src="assets/src/img/sl4.jpg" alt="Картинка слайда 4"
+                                                    class="sl__img">
+                            <div class="sl__text">
+                                <h3 class="sl__zag">Слайд 4</h3>
+                                <p class="sl__desc">Описание слайда №4</p>
+                            </div>
+                        </div>
+                        <div class="sl__slide"><img src="assets/src/img/sl5.jpg" alt="Картинка слайда 5"
+                                                    class="sl__img">
+                            <div class="sl__text">
+                                <h3 class="sl__zag">Слайд 5</h3>
+                                <p class="sl__desc">Описание слайда №5</p>
+                            </div>
+                        </div>
+                        <div class="sl__slide"><img src="assets/src/img/sl6.jpg" alt="Картинка слайда 6"
+                                                    class="sl__img">
+                            <div class="sl__text">
+                                <h3 class="sl__zag">Слайд 6</h3>
+                                <p class="sl__desc">Описание слайда №6</p>
+                            </div>
+                        </div>
+                        <div class="sl__slide"><img src="assets/src/img/sl7.jpg" alt="Картинка слайда 7"
+                                                    class="sl__img">
+                            <div class="sl__text">
+                                <h3 class="sl__zag">Слайд 7</h3>
+                                <p class="sl__desc">Описание слайда №7</p>
+                            </div>
+                        </div>
+                        <div class="sl__slide"><img src="assets/src/img/sl8.jpg" alt="Картинка слайда 8"
+                                                    class="sl__img">
+                            <div class="sl__text">
+                                <h3 class="sl__zag">Слайд 8</h3>
+                                <p class="sl__desc">Описание слайда №8</p>
+                            </div>
+                        </div>
+                        <div class="sl__slide"><img src="assets/src/img/sl9.jpg" alt="Картинка слайда 9"
+                                                    class="sl__img">
+                            <div class="sl__text">
+                                <h3 class="sl__zag">Слайд 9</h3>
+                                <p class="sl__desc">Описание слайда №9</p>
+                            </div>
+                        </div>
+                        <div class="sl__slide"><img src="assets/src/img/sl10.jpg" alt="Картинка слайда 10"
+                                                    class="sl__img">
+                            <div class="sl__text">
+                                <h3 class="sl__zag">Слайд 10</h3>
+                                <p class="sl__desc">Описание слайда №10</p>
+                            </div>
+                        </div>
+                        <div class="sl__slide"><img src="assets/src/img/sl11.jpg" alt="Картинка слайда 11"
+                                                    class="sl__img">
+                            <div class="sl__text">
+                                <h3 class="sl__zag">Слайд 11</h3>
+                                <p class="sl__desc">Описание слайда №11</p>
+                            </div>
+                        </div>
+                        <div class="sl__slide"><img src="assets/src/img/sl12.jpg" alt="Картинка слайда 12"
+                                                    class="sl__img">
+                            <div class="sl__text">
+                                <h3 class="sl__zag">Слайд 12</h3>
+                                <p class="sl__desc">Описание слайда №12</p>
+                            </div>
+                        </div>
+                        <div class="sl__slide"><img src="assets/src/img/sl13.jpg" alt="Картинка слайда 13"
+                                                    class="sl__img">
+                            <div class="sl__text">
+                                <h3 class="sl__zag">Слайд 13</h3>
+                                <p class="sl__desc">Описание слайда №13</p>
+                            </div>
+                        </div>
+                        <div class="sl__slide"><img src="assets/src/img/sl14.jpg" alt="Картинка слайда 14"
+                                                    class="sl__img">
+                            <div class="sl__text">
+                                <h3 class="sl__zag">Слайд 14</h3>
+                                <p class="sl__desc">Описание слайда №14</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <nav aria-label="Page navigation example">
-                    <ul class="pagination">
-                        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                    <ul class="pagination buttons-checkbox">
+                        <li class="page-item active"><a class="page-link" href="#">Previous</a></li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
                         <li class="page-item"><a class="page-link" href="#">2</a></li>
                         <li class="page-item"><a class="page-link" href="#">3</a></li>
                         <li class="page-item"><a class="page-link" href="#">Next</a></li>
@@ -195,6 +361,7 @@
 
 <!--Main-->
 
+
 <footer class="footer">
     <div class="container">
         <div class="row">
@@ -236,5 +403,6 @@
 </div>
 
 <script src="assets/dist/javascript/global.js"></script>
+<script src="assets/src/javascript/slick-1.8.0/slick/slick.min.js"></script>
 </body>
 </html>
