--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>EKZ</title>
+    <title>creativedigital</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="assets/src/img/favicon.png">
     <link rel="stylesheet" href="assets/dist/css/style.css">
-    <script src="assets/components/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
 
@@ -45,14 +45,20 @@
         <h1 class="display-2">
             Best Web site From Odessa
         </h1>
+
         <P class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aspernatur assumenda, blanditiis
             doloremque enim fuga iste molestias nemo!</P>
+        <nav aria-label="breadcrumb" role="navigation">
+
+        </nav>
     </div>
 </header>
 
 <!--Header-->
 
 <!--Main-->
+
+
 
 <main class="main">
     <div class="container">
@@ -84,7 +90,21 @@
                         <button type="submit" class="btn btn-success btn-block">Subscribe</button>
                     </form>
                 </div>
+
+
+                <div class="card mb-4">
+                    <img class="card-img-top" src="assets/src/img/99.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+
             </div>
+
 
             <div class="col-lg-6 col-md-8 order-1 order-lg-2">
                 <div class="card mb-4">
@@ -126,17 +146,79 @@
                         <a href="#" class="btn btn-outline-primary btn-sm">Read more</a>
                     </div>
                 </div>
+
+                <div class="block">
+                    <h4>
+                        New Forest
+                    </h4>
+                    <div class="accordion" id="accordion2">
+                        <div class="accordion-group btn-block">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle nav-link" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapseOne">
+                                    Page 1
+                                </a>
+                            </div>
+                            <div id="collapseOne" class="accordion-body collapse in">
+                                <div class="accordion-inner">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto at
+                                    dignissimos error eum ex facilis inventore ipsam perferendis provident, quasi quos
+                                    suscipit, vitae? Rerum?
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading btn-block">
+                                <a class="accordion-toggle nav-link" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapseTwo">
+                                    Page 2
+                                </a>
+                            </div>
+                            <div id="collapseTwo" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate dolorum eum
+                                    eveniet quasi quidem quo tempore voluptatum? Beatae commodi earum excepturi expedita
+                                    impedit ipsam iure labore maiores nostrum praesentium quae quisquam, sit tempore
+                                    veniam?
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group btn-block">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle nav-link" data-toggle="collapse" data-parent="#accordion3"
+                                   href="#collapseThree">
+                                    Page 3
+                                </a>
+                            </div>
+                            <div id="collapseThree" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem cum dolorum ducimus
+                                    enim eos hic illo iure odit placeat, voluptatem. Ab accusamus accusantium ad aperiam
+                                    at autem cum cupiditate delectus dolor earum est ex excepturi, id illo laboriosam
+                                    laborum natus nulla odit praesentium provident quibusdam quos sed, sunt unde
+                                    voluptate.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+
+
                 <nav aria-label="Page navigation example">
-                    <ul class="pagination">
-                        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                    <ul class="pagination buttons-checkbox">
+                        <li class="page-item active"><a class="page-link" href="#">Previous</a></li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
                         <li class="page-item"><a class="page-link" href="#">2</a></li>
                         <li class="page-item"><a class="page-link" href="#">3</a></li>
                         <li class="page-item"><a class="page-link" href="#">Next</a></li>
                     </ul>
                 </nav>
             </div>
-
             <div class="col-lg-3 col-md-4 order-2 order-lg-3">
                 <div class="list-group mb-4">
                     <a href="#" class="list-group-item list-group-item-action active">
@@ -156,7 +238,6 @@
                     <a class="badge badge-info" href="#">nature</a>
                     <a class="badge badge-info" href="#">photos</a>
                 </div>
-
 
                 <h3>Gallery</h3>
 
@@ -187,6 +268,38 @@
                     </div>
                 </div>
 
+
+                <div class="block">
+                    <div class="row no-gutters">
+                        <div class="col-6">
+                            <img class="img-fluid" src="assets/src/img/1.jpg" alt="">
+                        </div>
+                        <div class="col-6">
+                            <img class="img-fluid" src="assets/src/img/2.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="row no-gutters">
+                        <div class="col-6">
+                            <img class="img-fluid" src="assets/src/img/3.jpg" alt="">
+                        </div>
+                        <div class="col-6">
+                            <img class="img-fluid" src="assets/src/img/4.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="row no-gutters">
+                        <div class="col-6">
+                            <img class="img-fluid" src="assets/src/img/5.jpg" alt="">
+                        </div>
+                        <div class="col-6">
+                            <img class="img-fluid" src="assets/src/img/6.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
             </div>
 
         </div>
@@ -194,6 +307,7 @@
 </main>
 
 <!--Main-->
+
 
 <footer class="footer">
     <div class="container">
