--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
     <title>creativedigital</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="assets/src/img/favicon.png">
-    <link rel="stylesheet" type="text/css" href="assets/src/javascript/slick-1.8.0/slick/slick.css"/>
-    // Add the new slick-theme.css if you want the default styling
-    <link rel="stylesheet" type="text/css" href="assets/src/javascript/slick-1.8.0/slick/slick-theme.css"/>
-    <link rel="stylesheet" href="assets/src/javascript/plugins/slick.min.js">
     <link rel="stylesheet" href="assets/dist/css/style.css">
 </head>
 <body>
@@ -49,14 +45,19 @@
         <h1 class="display-2">
             Best Web site From Odessa
         </h1>
+
         <P class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aspernatur assumenda, blanditiis
             doloremque enim fuga iste molestias nemo!</P>
+        <nav aria-label="breadcrumb" role="navigation">
+
+        </nav>
     </div>
 </header>
 
 <!--Header-->
 
 <!--Main-->
+
 
 
 <main class="main">
@@ -89,7 +90,21 @@
                         <button type="submit" class="btn btn-success btn-block">Subscribe</button>
                     </form>
                 </div>
+
+
+                <div class="card mb-4">
+                    <img class="card-img-top" src="assets/src/img/99.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+
             </div>
+
 
             <div class="col-lg-6 col-md-8 order-1 order-lg-2">
                 <div class="card mb-4">
@@ -131,7 +146,6 @@
                         <a href="#" class="btn btn-outline-primary btn-sm">Read more</a>
                     </div>
                 </div>
-
 
                 <div class="block">
                     <h4>
@@ -189,108 +203,11 @@
                     </div>
                 </div>
 
-                <div class="container">
-                    <div class="sl">
-                        <div class="sl__slide"><img src="assets/src/img/sl1.jpg" alt="Картинка слайда 1"
-                                                    class="sl__img">
-                            <div class="sl__text">
-                                <h3 class="sl__zag">Слайд 1</h3>
-                                <p class="sl__desc">Описание слайда №1</p>
-                            </div>
-                        </div>
-                        <div class="sl__slide"><img src="assets/src/img/sl2.jpg" alt="Картинка слайда 2"
-                                                    class="sl__img">
-                            <div class="sl__text">
-                                <h3 class="sl__zag">Слайд 2</h3>
-                                <p class="sl__desc">Описание слайда №2</p>
-                            </div>
-                        </div>
-                        <div class="sl__slide"><img src="assets/src/img/sl3.jpg" alt="Картинка слайда 3"
-                                                    class="sl__img">
-                            <div class="sl__text">
-                                <h3 class="sl__zag">Слайд 3</h3>
-                                <p class="sl__desc">Описание слайда №3</p>
-                            </div>
-                        </div>
-                        <div class="sl__slide"><img src="assets/src/img/sl4.jpg" alt="Картинка слайда 4"
-                                                    class="sl__img">
-                            <div class="sl__text">
-                                <h3 class="sl__zag">Слайд 4</h3>
-                                <p class="sl__desc">Описание слайда №4</p>
-                            </div>
-                        </div>
-                        <div class="sl__slide"><img src="assets/src/img/sl5.jpg" alt="Картинка слайда 5"
-                                                    class="sl__img">
-                            <div class="sl__text">
-                                <h3 class="sl__zag">Слайд 5</h3>
-                                <p class="sl__desc">Описание слайда №5</p>
-                            </div>
-                        </div>
-                        <div class="sl__slide"><img src="assets/src/img/sl6.jpg" alt="Картинка слайда 6"
-                                                    class="sl__img">
-                            <div class="sl__text">
-                                <h3 class="sl__zag">Слайд 6</h3>
-                                <p class="sl__desc">Описание слайда №6</p>
-                            </div>
-                        </div>
-                        <div class="sl__slide"><img src="assets/src/img/sl7.jpg" alt="Картинка слайда 7"
-                                                    class="sl__img">
-                            <div class="sl__text">
-                                <h3 class="sl__zag">Слайд 7</h3>
-                                <p class="sl__desc">Описание слайда №7</p>
-                            </div>
-                        </div>
-                        <div class="sl__slide"><img src="assets/src/img/sl8.jpg" alt="Картинка слайда 8"
-                                                    class="sl__img">
-                            <div class="sl__text">
-                                <h3 class="sl__zag">Слайд 8</h3>
-                                <p class="sl__desc">Описание слайда №8</p>
-                            </div>
-                        </div>
-                        <div class="sl__slide"><img src="assets/src/img/sl9.jpg" alt="Картинка слайда 9"
-                                                    class="sl__img">
-                            <div class="sl__text">
-                                <h3 class="sl__zag">Слайд 9</h3>
-                                <p class="sl__desc">Описание слайда №9</p>
-                            </div>
-                        </div>
-                        <div class="sl__slide"><img src="assets/src/img/sl10.jpg" alt="Картинка слайда 10"
-                                                    class="sl__img">
-                            <div class="sl__text">
-                                <h3 class="sl__zag">Слайд 10</h3>
-                                <p class="sl__desc">Описание слайда №10</p>
-                            </div>
-                        </div>
-                        <div class="sl__slide"><img src="assets/src/img/sl11.jpg" alt="Картинка слайда 11"
-                                                    class="sl__img">
-                            <div class="sl__text">
-                                <h3 class="sl__zag">Слайд 11</h3>
-                                <p class="sl__desc">Описание слайда №11</p>
-                            </div>
-                        </div>
-                        <div class="sl__slide"><img src="assets/src/img/sl12.jpg" alt="Картинка слайда 12"
-                                                    class="sl__img">
-                            <div class="sl__text">
-                                <h3 class="sl__zag">Слайд 12</h3>
-                                <p class="sl__desc">Описание слайда №12</p>
-                            </div>
-                        </div>
-                        <div class="sl__slide"><img src="assets/src/img/sl13.jpg" alt="Картинка слайда 13"
-                                                    class="sl__img">
-                            <div class="sl__text">
-                                <h3 class="sl__zag">Слайд 13</h3>
-                                <p class="sl__desc">Описание слайда №13</p>
-                            </div>
-                        </div>
-                        <div class="sl__slide"><img src="assets/src/img/sl14.jpg" alt="Картинка слайда 14"
-                                                    class="sl__img">
-                            <div class="sl__text">
-                                <h3 class="sl__zag">Слайд 14</h3>
-                                <p class="sl__desc">Описание слайда №14</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
+
+
+
+
 
                 <nav aria-label="Page navigation example">
                     <ul class="pagination buttons-checkbox">
@@ -302,7 +219,6 @@
                     </ul>
                 </nav>
             </div>
-
             <div class="col-lg-3 col-md-4 order-2 order-lg-3">
                 <div class="list-group mb-4">
                     <a href="#" class="list-group-item list-group-item-action active">
@@ -322,7 +238,6 @@
                     <a class="badge badge-info" href="#">nature</a>
                     <a class="badge badge-info" href="#">photos</a>
                 </div>
-
 
                 <h3>Gallery</h3>
 
@@ -352,6 +267,38 @@
                         </div>
                     </div>
                 </div>
+
+
+                <div class="block">
+                    <div class="row no-gutters">
+                        <div class="col-6">
+                            <img class="img-fluid" src="assets/src/img/1.jpg" alt="">
+                        </div>
+                        <div class="col-6">
+                            <img class="img-fluid" src="assets/src/img/2.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="row no-gutters">
+                        <div class="col-6">
+                            <img class="img-fluid" src="assets/src/img/3.jpg" alt="">
+                        </div>
+                        <div class="col-6">
+                            <img class="img-fluid" src="assets/src/img/4.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="row no-gutters">
+                        <div class="col-6">
+                            <img class="img-fluid" src="assets/src/img/5.jpg" alt="">
+                        </div>
+                        <div class="col-6">
+                            <img class="img-fluid" src="assets/src/img/6.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+
+
+
+
 
             </div>
 
@@ -403,6 +350,5 @@
 </div>
 
 <script src="assets/dist/javascript/global.js"></script>
-<script src="assets/src/javascript/slick-1.8.0/slick/slick.min.js"></script>
 </body>
 </html>
